deploy/kubernetes/minio/minio.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: minio
  name: deploy-minio
  namespace: minio-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: minio
    spec:
      volumes:
        - name: localvolume
          hostPath:
            path: /mnt/disk1/data
            type: DirectoryOrCreate
      containers:
        - name: minio
          image: quay.io/minio/minio:RELEASE.2024-01-13T07-53-03Z
          command:
            - /bin/bash
            - -c
          args:
            - minio server /data --address :9000 --console-address :9090
          volumeMounts:
            - mountPath: /data
              name: localvolume
status: {}
